<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="horizontal"
    android:padding="24dp"
    tools:context=".FindpasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- 뒤로가기 -->
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:paddingStart="0dp"
            android:paddingEnd="1dp"
            android:src="@drawable/chevron_left_thin" />

        <!-- 왼쪽 공간 -->
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.6" />

        <!-- 회원가입 텍스트 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="  @string/title_find_password"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/enter_previous_email_message"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/edit_text"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp" />

    <!-- 버튼 -->
    <Button
        android:id="@+id/btnSendCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:background="@drawable/btn_border"
        android:padding="10dp"
        android:text="@string/submit_button"
        android:textColor="#BDBDBD"
        android:textSize="20dp" />

</LinearLayout>